# canonical-simple-meta-parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  vcpkg.json
include/canonical/: abstract_cloud_images_fetcher.hpp
src/: CMakeLists.txt
src/canonical/: CMakeLists.txt
src/canonical/include/canonical/: cloud_images_fetcher.hpp
src/canonical/src/: cloud_images_fetcher.cc  http_client.cc  http_client.hpp  meta_info_parser.cc  meta_info_parser.hpp
src/cli/: CMakeLists.txt  main.cc
